# CarLeasing

./: CMakeLists.txt  main.cpp
Entities/car/: BodyType.h  Transmission.h
Entities/order/: Order.cpp  Order.h
Services/car/: CarService.cpp  CarService.h
UI/cars/: carcatalogpage.cpp  carcatalogpage.h
mapper/car/: CarMapper.cpp
mapper/order/: OrderMapper.cpp
